<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_LVCP1_MainDisconnector" Id="{55e9da0b-1b58-47a8-9ed2-40067ed299df}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP1_MainDisconnector
VAR
    // Function Block Instance
    fbDisconnector		: FB_DisconnectorControl;
	
	stDisconnectorIO	: ST_DisconnectorIO;
	
    
    // Başlangıç konfigürasyonu için flag
    bInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT bInitDone THEN
	bInitDone := TRUE;
	RETURN;
END_IF

//*************************************************************************
// Ana Besleme Ayırıcısı
// +EP6-8CB1
//*************************************************************************
fbDisconnector(
    // Fiziksel Girişler
    bContactorOn_FB 	:= stDisconnectorIO.bContactorOn_FB,
    bContactorOff_FB 	:= stDisconnectorIO.bContactorOff_FB,
    bLimitOn 			:= stDisconnectorIO.bLimitOn,
    bLimitOff 			:= stDisconnectorIO.bLimitOff,
    bThermalFault 		:= stDisconnectorIO.bThermalFault,
    bEarthSwitchOn 		:= stDisconnectorIO.bEarthSwitchOn,
    bEarthSwitchOff 	:= stDisconnectorIO.bEarthSwitchOff,
    bPLCControl 		:= stDisconnectorIO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop 		:= GVL_Alarm.bSafetyLoop,
    bInterlock 			:= FALSE,
    
    // Sistem Girişleri
    bMasterReset 		:= GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI 				:= GVL_LVCP1.stMainDisconnectorHMI,
    
    // Fiziksel Çıkışlar
    bContactorOn_Out 	=> stDisconnectorIO.bContactorOn_Out,
    bContactorOff_Out 	=> stDisconnectorIO.bContactorOff_Out
);
]]></ST>
    </Implementation>
    <Method Name="M_Init" Id="{c36f0339-f96c-4ce7-9d6d-421fb861ba7d}">
      <Declaration><![CDATA[METHOD M_Init : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
GVL_LVCP1.stMainDisconnectorHMI.stConfig.bEarthSwitchExists := TRUE;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.bGrounded := TRUE;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.bInterlockEnable := TRUE;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.dwOperationLimit := 10000;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.nPhaseCount := 3;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.rRatedCurrent := 1600.0;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.rRatedVoltage := 1000.0;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.sProductCode := '';
GVL_LVCP1.stMainDisconnectorHMI.stConfig.sProjectCode := '+EP6-8CB1';
GVL_LVCP1.stMainDisconnectorHMI.stConfig.tContactorDelay := T#500MS;
GVL_LVCP1.stMainDisconnectorHMI.stConfig.tMotionTimeout := T#50S;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP1_MainDisconnector">
      <LineId Id="147" Count="33" />
      <LineId Id="80" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP1_MainDisconnector.M_Init">
      <LineId Id="9" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="10" />
    </LineIds>
  </POU>
</TcPlcObject>