<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="PRG_LVCP2_Group10" Id="{aff6a5b2-ab1f-42b9-8673-370f19f5fa90}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP2_Group10
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{c91cb04d-5fe7-4050-a33c-680d7acf9d00}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 9;  // Grup 10 için index

IF NOT bCapacitorInitDone THEN
    // Grup 10 değerlerini ata
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rPower := 12.5;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].nQuantity := 1;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP7-43C1';
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-12.5';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 10 aktif durumu
GVL_LVCP2.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{dc2b0959-2db9-441c-a176-d5f4ece02964}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.sProjectCode := '+EP7-43K1';
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.sProductCode := 'ABB 1SFL427001R1311';
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.rRatedCurrent := 115.0;
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.rRatedVoltage := 1000.0;
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP2.stGroup10_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP2.stGroup10_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP2.stGroup10_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback := stContactor_IO.bFeedback,
    bPLCControl := stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop := GVL_Alarm.bSafetyLoop,
    bInterlock := FALSE,
    
    // Sistem Girişleri
    bMasterReset := GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI := GVL_LVCP2.stGroup10_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput => stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP2_Group10">
      <LineId Id="18" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group10.M_Capacitor">
      <LineId Id="9" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group10.M_Contactor">
      <LineId Id="9" Count="36" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>