<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="PRG_LVCP2_Group8" Id="{800ac8dd-db6e-4fb5-a46d-9535631a19fb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP2_Group8
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{aeb8fa33-e1e0-45e0-92e5-0b5d761a757d}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 7;  // Grup 8 için index

IF NOT bCapacitorInitDone THEN
    // Grup 8 değerlerini ata
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rPower := 12.5;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].nQuantity := 3;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP7-37C1';
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-12.5';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 8 aktif durumu
GVL_LVCP2.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{28ac154a-2959-4196-8442-3416af8f2a4c}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.sProjectCode := '+EP7-38K1';
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.sProductCode := 'ABB 1SFL447001R1311';
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.rRatedCurrent := 115.0;
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.rRatedVoltage := 1000.0;
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP2.stGroup8_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP2.stGroup8_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP2.stGroup8_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback := stContactor_IO.bFeedback,
    bPLCControl := stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop := GVL_Alarm.bSafetyLoop,
    bInterlock := FALSE,
    
    // Sistem Girişleri
    bMasterReset := GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI := GVL_LVCP2.stGroup8_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput => stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP2_Group8">
      <LineId Id="18" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group8.M_Capacitor">
      <LineId Id="9" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group8.M_Contactor">
      <LineId Id="9" Count="36" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>